k8/container/web-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-front-end-vs
  namespace: demo-vm-ossm
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/demo-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: web-front-end.demo-vm-ossm.svc.cluster.local
        port:
          number: 8080
